# FloorPlan-DSL

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  Templates.md  Tutorial.md  config.yaml  pyproject.toml  requirements.txt  runtests.sh  setup.cfg  setup.py  test.sh
.github/workflows/: black.yaml  ci.yaml  docker.yaml  pages.yaml
config/: setup.cfg
diagrams/: exsce_floorplan.dot  exsce_floorplan.pu
docs/: README.md  Tutorial.md  Variation.md  _config.yaml  concepts.md  index.md  v2-motivation.md
docs/_sass/color_schemes/: bremen.scss
docs/_sass/custom/: custom.scss
docs/design/: index.md  v2-motivation.md
docs/images/: jinja-templates.drawio
docs/metamodels/: floorplan.md  geometry.md  units.md  variables.md
docs/tutorials/: floorplan.md  index.md  variation.md
docs/v1/: concepts.md  metamodels.md
exsce_floorplan/: __init__.py  exsce_floorplan.py  exsce_floorplan.tx  floorplan_geometry.tx  floorplan_polytope.tx  processors.py
exsce_floorplan/Blender/: blender.py
exsce_floorplan/Classes/: Floorplan.py  Geometry.py  Polytope.py  Space.py  Wall.py  WallOpening.py
models/: brsu_building_c.fpm  brsu_building_c_with_doors.fpm  brsu_building_c_with_doorways.fpm  hbrs.floorplan  hbrs.fpm  hbrs.variation  hospital.floorplan  hospital.fpm2  hospital.json  hospital.variation  hospital_2.floorplan  hospital_6407.floorplan  hospital_6509.floorplan  hospital_7368.floorplan  hospital_7418.floorplan  kitchen.fpm  kitchen.variation  kuka.fpm2  office.fpm  office.fpm2  room.fpm  square.fpm
models/IROS/: basement.floorplan  basement_carts.floorplan  basement_carts.variation  brsu-building-c.floorplan  cart_basement_1189.floorplan  cart_basement_1331.floorplan  cart_basement_6551.floorplan  cart_basement_8229.floorplan  cart_basement_9289.floorplan
models/IROS/basement_variations/: cart_basement_1024.floorplan  cart_basement_1029.floorplan  cart_basement_1338.floorplan  cart_basement_1547.floorplan  cart_basement_1686.floorplan  cart_basement_2115.floorplan  cart_basement_2146.floorplan  cart_basement_2212.floorplan  cart_basement_2426.floorplan  cart_basement_2793.floorplan  cart_basement_2987.floorplan  cart_basement_3739.floorplan  cart_basement_3764.floorplan  cart_basement_5487.floorplan  cart_basement_5833.floorplan  cart_basement_6028.floorplan  cart_basement_6432.floorplan  cart_basement_6443.floorplan  cart_basement_6740.floorplan  cart_basement_6889.floorplan  cart_basement_7452.floorplan  cart_basement_7481.floorplan  cart_basement_7588.floorplan  cart_basement_7840.floorplan  cart_basement_7960.floorplan  cart_basement_7985.floorplan  cart_basement_8120.floorplan  cart_basement_8122.floorplan  cart_basement_8232.floorplan  cart_basement_8436.floorplan  cart_basement_9036.floorplan  cart_basement_9120.floorplan  cart_basement_9203.floorplan  cart_basement_9624.floorplan  cart_basement_9636.floorplan
models/MODELS/: brsu-building-c-level-0.floorplan  brsu-building-c-level-1.floorplan  brsu-building-c-level-2.floorplan  brsu-building-c-level-3.floorplan  brsu-building-c-level-4.floorplan  brsu-building-c-level-5.floorplan  brsu-building-c-recreation.floorplan  illustration.floorplan  illustration.variation  office.floorplan  office_two.floorplan
models/MODELS/copies/: brsu-building-c-level-0.floorplan  brsu-building-c-level-1.floorplan  brsu-building-c-level-2.floorplan  brsu-building-c-level-3.floorplan  brsu-building-c-level-4.floorplan
models/examples/: brsu-building-c.floorplan  brsu_building_c_with_doors.floorplan  brsu_building_c_with_doorways.floorplan  hbrs.floorplan  hbrs.variation  hospital.floorplan  hospital.fpm2  hospital.variation  kitchen.floorplan  kitchen.fpm2  kitchen.variation  office.floorplan  stress.floorplan
models/paper/: basement_carts_column.floorplan  brsu-building-c-with-doors.floorplan  brsu-building-c.floorplan  brsu-building-c.variation
models/paper/basement_variations/: cart_basement_1549.floorplan  cart_basement_3580.floorplan  cart_basement_3943.floorplan  cart_basement_4012.floorplan  cart_basement_4566.floorplan  cart_basement_5832.floorplan  cart_basement_6249.floorplan  cart_basement_6821.floorplan  cart_basement_7502.floorplan  cart_basement_9313.floorplan  cart_basement_9333.floorplan
output/: enviornment.stl  hospital_2_enviornment.stl  hospital_enviornment.stl  hospital_enviornment_no_normals.stl  hospital_occupancy_grid.pgm  hospital_occupancy_grid.yaml  hosptial_three_rooms.pgm  mesh.world
src/exsce_floorplan/: exsce_floorplan.py  exsce_variations.py  registration.py
src/exsce_floorplan/blender/: blender.py
src/exsce_floorplan/floor_plan/: generators.py  json_ld_transformation.py
src/exsce_floorplan/floor_plan/classes/: floor_feature.py  geometry.py  helpers.py  polytope.py  position.py  space.py  wall.py  wall_opening.py
src/exsce_floorplan/floor_plan/grammar/: exsce_floorplan.tx  floorplan_geometry.tx  floorplan_polytope.tx  geometry.tx  openings.tx  spaces.tx  syntax.tx  units.tx  variables.tx
src/exsce_floorplan/templates/: __name__.fpm2.jinja  __name____seed__.fpm2.jinja  base.json  coordinate.json.jinja  floorplan.fpm2.jinja  floorplan.json  floorplan.json.jinja  geometry.json  identifiers.json  relations.json  shape.json.jinja  skeleton.json.jinja  spatial_relations.json.jinja
src/exsce_floorplan/variation/: exsce_variations.py
src/floorplan_dsl/: registration.py
src/floorplan_dsl/blender/: blender.py
src/floorplan_dsl/generators/: floorplan.py  fpm.py  variations.py
src/floorplan_dsl/processors/: __init__.py  fpm2.py
src/floorplan_dsl/scoping/: fpm2.py
src/floorplan_dsl/templates/: __name__.fpm2.jinja
src/floorplan_dsl/utils/: geometry.py  qudt.py  transformations.py
src/floorplan_dsl/variation/: exsce_variations.py
tests/: floorplan_tests.py  geometry_tests.py  test_cases.py  walls_test.py
vscode-plugins/: floorplan.json
vscode-plugins/exsce-floorplan/: package.json
vscode-plugins/exsce-floorplan/syntaxes/: floorplan.json
vscode-plugins/exsce-variation/: package.json
vscode-plugins/exsce-variation/syntaxes/: variation.json
(+135 files in other folders)
