[metadata]
name = Floorplan
author = BRSU 
author_email = None
license = MIT
description = None
keywords = textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options] 
packages = find:
zip_safe = False
install_requires =
    textX
include_package_data = True
package_dir =
    exsce_floorplan = exsce_floorplan

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]
    exsce_floorplan = *.tx

[options.entry_points]
textx_languages =
    exsce_floorplan = exsce_floorplan:exsce_floorplan_language

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90

[model]
format = stl
output_folder = /output/models/{{model_name}}/meshes

[map_yaml]
resolution = 0.05
occupied_thresh = 0.65
free_thresh = 0.196
negate = 0

[map]
unknown = 200
occupied = 0
free = 255
laser_height = 0.7
#output_folder = output/{{model_name}}/map
output_folder  = /output/maps/{{model_name}}
border = 50

[composable_models]
output_folder = output/{{model_name}}/jsonld